<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etNombre"
        android:hint="@string/nombre"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etNombre"
        android:id="@+id/etTelefono"
        android:hint="@string/telefono"/>/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etTelefono"
        android:layout_marginBottom="10dp"
        android:id="@+id/etFNac"
        android:hint="@string/fecha_nac"/>/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etFNac"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp"
        android:id="@+id/bAceptar"
        android:text="@android:string/ok"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bCancelar"
        android:layout_below="@+id/etFNac"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:text="@android:string/cancel"
        />
</RelativeLayout>
