<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <EditText
        android:id="@+id/etContrincante"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrincante" />

    <EditText
        android:id="@+id/etJugador"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etContrincante"
        android:inputType="number"
        android:hint="@string/jugador" />/>

    <EditText
        android:id="@+id/etValoracion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etJugador"
        android:inputType="number"
        android:layout_marginBottom="10dp"
        android:hint="@string/valoracion" />/>

    <Button
        android:id="@+id/bAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etValoracion"
        android:layout_marginRight="40dp"
        android:text="@android:string/ok" />

    <Button
        android:id="@+id/bCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etValoracion"
        android:layout_marginLeft="40dp"
        android:text="@android:string/cancel" />
</RelativeLayout>
